--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "ie-shim": "^0.1.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.1",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "webpack-dev-server": ">=3.1.11"
   },
   "devDependencies": {
     "@types/node": "^7.0.12",
